@@ -1,21 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-5.out
-mkdir smidump-5.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: comparing \`smidump -f tree' output with dumps/$mib.tree."
-    for d in `echo ${SMIPATH} | tr ':' ' '` ; do
-	if [ -f $d/$mib ] ; then break ; fi
-    done 
-    ../tools/smidump -f tree $mib > smidump-5.out/$mib.tree
-    WC=`diff -I smidump --ignore-blank-lines smidump-5.out/$mib.tree dumps/$mib.tree | wc -l`
-    if [ $WC -ne 0 ] ; then
-	echo "smidump -f tree output for $mib differs from dump/$mib.tree."
-	RC=1
-    fi
-done
-
-exit ${RC}
