@@ -1,3 +1,11 @@
+1999-10-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* test/Makefile.am: restructured tests slightly.
+	
+	* mibs/Makefile.am: added a huge amount of (nearly all current?)
+	Standard MIBS and some more. They still have to be checked
+	for completeness and `libsmi robustness'.
+
 1999-10-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* lib/parser-smi.y: fixed problems with OID DEFVALS in SMIv1
